shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: kubernetes.cs.bath.ac.uk
      http:
        paths:
          - path: /api/chores(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: chores-service
                port:
                  number: 3000
            annotations:
              nginx.ingress.kubernetes.io/rewrite-target: /$2

          - path: /api/users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 3000
            annotations:
              nginx.ingress.kubernetes.io/rewrite-target: /$2

          - path: /api/bills(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bills-service
                port:
                  number: 3000
            annotations:
              nginx.ingress.kubernetes.io/rewrite-target: /$2

          - path: /api/chat(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 3000
            annotations:
              nginx.ingress.kubernetes.io/rewrite-target: /$2

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
